--- a/UI/index.html
+++ b/UI/index.html
@@ -11,14 +11,14 @@
     <header class="default-header">
         <div class="sticky-wrapper">
             <div class="container">
-                <div class="header-content aic jcb d-flex">
+                <div class="header-content">
                     <div class="logo">
                         <a href="http://" target="_blank" rel="noopener noreferrer">Politico</a>
                     </div>
                     <nav class="d-flex aic">
                         <ul class="nav-menu">
-                            <li><a href="signup.html" target="_blank" rel="noopener noreferrer">Signup</a></li>
-                            <li><a href="http://" target="_blank" rel="noopener noreferrer">Login</a></li>
+                            <li><a href="signup.html">Signup</a></li>
+                            <li><a href="login.html">Login</a></li>
                         </ul>
                     </nav>
                 </div>
@@ -26,7 +26,7 @@
         </div>
     </header>
 
-    <main id="home-wrapper">
+    <div id="home-wrapper">
         <div class="container">
             <div class="row fullscreen">
                 <div class="col-8 mx">
@@ -36,6 +36,6 @@
                 </div>
             </div>
         </div>
-    </main>
+    </div>
 </body>
 </html>
