--- a/UI/login.html
+++ b/UI/login.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Create a Politico Account</title>
+    <title>Welcome Back</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="./assets/css/style.css" />
 </head>
@@ -25,7 +25,7 @@
         </div>
     </header> -->
 
-    <main>
+    <div id = "form-wrapper">
         <section class="form-register">
             <div class="overlay overlay-bg"></div>
             <div class="container">
@@ -48,12 +48,12 @@
                                 </div>
                             </form>
                             <p>Don't have an account?</p>
-                            <a href="">Create an account</a>
+                            <a href="signup.html">Create an account</a>
                         </div>
                     </div>
                 </div>
             </div>
         </section>
-    </main>
+    </div>
 </body>
 </html>
