--- a/UI/signup.html
+++ b/UI/signup.html
@@ -25,7 +25,7 @@
         </div>
     </header> -->
 
-    <main>
+    <div id = "form-wrapper">
         <section class="form-register">
             <div class="overlay overlay-bg"></div>
             <div class="container">
@@ -51,12 +51,12 @@
                                 </div>
                             </form>
                             <p>Already have an account?</p>
-                            <a href="">Sign in</a>
+                            <a href="login.html">Sign in</a>
                         </div>
                     </div>
                 </div>
             </div>
         </section>
-    </main>
+    </div>
 </body>
 </html>
