ft(feature):view all political parties
ensure user can view all political parties

[Delivers ft-feature-UI-viewPP-163328651]

--- a/UI/dashboard.html
+++ b/UI/dashboard.html
@@ -29,9 +29,9 @@
             <div class="sidebar">
             <section class="user-menu">
                 <ul class="navbar-nav">
-                    <li><a class="btn side" href="#">Basic</a></li>
-                    <!-- <li><a class="btn side" href="#">Textbook</a></li>
-                    <li><a class="btn side" href="#">Motivational</a></li>
+                    <li><a class="btn side" href="dashboard.html">Basic</a></li>
+                    <li><a class="btn side" href="parties.html">Political Parties</a></li>
+                    <!--<li><a class="btn side" href="#">Motivational</a></li>
                     <li><a class="btn side" href="#">Inspirational</a></li> -->
                 </ul>
             </section>
