ft(feature):edit party
ensure party information can be edited

[Delivers ft-feature-UI-editPP-163332853]

--- a/UI/parties.html
+++ b/UI/parties.html
@@ -47,25 +47,37 @@
                                     <thead>
                                         <tr>
                                             <th>Name</th>
+                                            <th>Acronym</th>
                                             <th>Action</th>
-                                            <th></th>
                                         </tr>
                                     </thead>
-                                    <tr>
-                                        <td>Peoples Democratic Party</td>
-                                    </tr>
-                                    <tr>
-                                    <td>National Peoples Party</td>
-                                    </tr>
-                                    <tr>
-                                    <td>All Nigerian Peoples Party</td>
-                                    </tr>
-                                    <tr>
-                                        <td>Alliance for Democracy</td>
-                                    </tr>
-                                    <tr>
-                                        <td>All Peoples Congress</td>
-                                    </tr>                                        
+                                    <tbody>
+                                        <tr>
+                                            <td>Peoples Democratic Party</td>
+                                            <td><Acronym>PDP</Acronym></td>
+                                            <td><a href="partyEdit.html">Edit</a></td>
+                                        </tr>
+                                        <tr>
+                                        <td>National Peoples Party</td>
+                                        <td><Acronym>NPP</Acronym></td>
+                                        <td><a href="partyEdit.html">Edit</a></td>
+                                        </tr>
+                                        <tr>
+                                        <td>All Nigerian Peoples Party</td>
+                                        <td><Acronym>ANPP</Acronym></td>
+                                        <td><a href="partyEdit.html">Edit</a></td>
+                                        </tr>
+                                        <tr>
+                                            <td>Alliance for Democracy</td>
+                                            <td><Acronym>AD</Acronym></td>
+                                            <td><a href="partyEdit.html">Edit</a></td>
+                                        </tr>
+                                        <tr>
+                                            <td>All Peoples Congress</td>
+                                            <td><Acronym>APC</Acronym></td>
+                                            <td><a href="partyEdit.html">Edit</a></td>
+                                        </tr>     
+                                    </tbody>                                   
                                 </table>
                             </div>
                         </div>
