--- a/UI/signup.html
+++ b/UI/signup.html
@@ -52,7 +52,7 @@
                             </form>
                             <p>Already have an account?</p>
                             <a href="login.html">Sign in</a>
-                        </div>
+                        </div><!-- form-container closed-->
                     </div>
                 </div>
             </div>
