ft(feature):delete political party
ensure political parties can be deleted

[Delivers ft-feature-UI-deletePP-163332883]

--- a/UI/parties.html
+++ b/UI/parties.html
@@ -55,27 +55,42 @@
                                         <tr>
                                             <td>Peoples Democratic Party</td>
                                             <td><Acronym>PDP</Acronym></td>
-                                            <td><a href="partyEdit.html">Edit</a></td>
+                                            <td>
+                                                <a href="partyEdit.html">Edit</a>
+                                                <button class="btn delete" type="submit">Delete</button>
+                                            </td>
                                         </tr>
                                         <tr>
                                         <td>National Peoples Party</td>
                                         <td><Acronym>NPP</Acronym></td>
-                                        <td><a href="partyEdit.html">Edit</a></td>
+                                        <td>
+                                            <a href="partyEdit.html">Edit</a>
+                                            <button class="btn delete" type="submit">Delete</button>
+                                        </td>
                                         </tr>
                                         <tr>
                                         <td>All Nigerian Peoples Party</td>
                                         <td><Acronym>ANPP</Acronym></td>
-                                        <td><a href="partyEdit.html">Edit</a></td>
+                                        <td>
+                                            <a href="partyEdit.html">Edit</a>
+                                            <button class="btn delete" type="submit">Delete</button>
+                                        </td>
                                         </tr>
                                         <tr>
                                             <td>Alliance for Democracy</td>
                                             <td><Acronym>AD</Acronym></td>
-                                            <td><a href="partyEdit.html">Edit</a></td>
+                                            <td>
+                                                <a href="partyEdit.html">Edit</a>
+                                                <button class="btn delete" type="submit">Delete</button>
+                                            </td>
                                         </tr>
                                         <tr>
                                             <td>All Peoples Congress</td>
                                             <td><Acronym>APC</Acronym></td>
-                                            <td><a href="partyEdit.html">Edit</a></td>
+                                            <td>
+                                                <a href="partyEdit.html">Edit</a>
+                                                <button class="btn delete" type="submit">Delete</button>
+                                            </td>
                                         </tr>     
                                     </tbody>                                   
                                 </table>
