ft(feature):create a political party
ensure new political party can be created

[Delivers ft-feature-UI-createPP-#163332863]

--- a/UI/parties.html
+++ b/UI/parties.html
@@ -41,6 +41,13 @@
             <section id="main-content">
                 <div class="container-wrapper">
                     <div class="container">
+                        <div class="row">
+                            <div class="col-12 mx">
+                               <div class="addNewParty">
+                                    <a class="btn" href="newParty.html" style="color:black">Create new party</a>
+                               </div>
+                            </div>
+                        </div>
                         <div class="row jcc">
                             <div class="col-7 mx">
                                 <table>
