--- a/UI/newOffice.html
+++ b/UI/newOffice.html
@@ -44,7 +44,7 @@
                         <div class="row">
                             <div class="col-12 mx">
                                 <div class="text-center">
-                                    <h3>New Party Registration</h3>
+                                    <h3>New Office</h3>
                                 </div>
                             </div>
                         </div>
@@ -53,16 +53,10 @@
                                 <div class="form-container">
                                     <form action="" id="regForm" class="form mb-10">
                                         <div class="single-input mb-10">
-                                            <input type="text" name="fullName" placeholder=" Party name e.g Alliance for Democracy" required onfocus="this.placeholder = ''" onblur="this.placeholder = 'Full Name'">
+                                            <input type="text" name="offName" placeholder=" Office name e.g President" required onfocus="this.placeholder = ''" onblur="this.placeholder = 'Office name'">
                                         </div>
                                         <div class="single-input mb-10">
-                                            <input type="text" name="acronym" placeholder=" Party acronym e.g ANPP" onfocus="this.placeholder=''" onblur="this.placeholder ='Party acronym'">
-                                        </div>
-                                        <div class="single-input mb-10">
-                                            <input type="tel" name="phoneNum" placeholder=" Office phone number e.g 09023456667" onblur="this.placeholder='Your telephone number'" onfocus="this.placeholder=''">
-                                        </div>
-                                        <div class="single-input mb-10">
-                                            <input type="text" name="address" placeholder="Office address e.g Adimula street, shomolu Lagos" onblur="this.placeholder='Your office address'" onfocus="this.placeholder=''">
+                                            <input type="text" name="offLocation" placeholder=" Election location e.g New Hampshire" onfocus="this.placeholder=''" onblur="this.placeholder ='Election location'">
                                         </div>
                                         <div class="d-flex jcc">
                                             <button class="mt-10 aic btn-primary text-uppercase">Create</button>
