--- a/UI/politicalOffice.html
+++ b/UI/politicalOffice.html
@@ -44,7 +44,7 @@
                         <div class="row">
                             <div class="col-12 mx">
                                <div class="addNewParty">
-                                    <a class="btn" href="newParty.html" style="color:black">Create new party</a>
+                                    <a class="btn" href="newOffice.html" style="color:black">Create new office</a>
                                </div>
                             </div>
                         </div>
@@ -53,51 +53,51 @@
                                 <table>
                                     <thead>
                                         <tr>
-                                            <th>Name</th>
-                                            <th>Acronym</th>
-                                            <th>Action</th>
+                                            <th>Office</th>
+                                            <th>Location</th>
+                                            <!-- <th>Action</th> -->
                                         </tr>
                                     </thead>
                                     <tbody>
                                         <tr>
-                                            <td>Peoples Democratic Party</td>
-                                            <td><Acronym>PDP</Acronym></td>
-                                            <td>
+                                            <td>Governor</td>
+                                            <td>Alabama</td>
+                                            <!-- <td>
                                                 <a href="partyEdit.html">Edit</a>
                                                 <button class="btn delete" type="submit">Delete</button>
-                                            </td>
+                                            </td> -->
                                         </tr>
                                         <tr>
-                                        <td>National Peoples Party</td>
-                                        <td><Acronym>NPP</Acronym></td>
-                                        <td>
+                                        <td>Governor</td>
+                                        <td>New York</td>
+                                        <!-- <td>
                                             <a href="partyEdit.html">Edit</a>
                                             <button class="btn delete" type="submit">Delete</button>
-                                        </td>
+                                        </td> -->
                                         </tr>
                                         <tr>
-                                        <td>All Nigerian Peoples Party</td>
-                                        <td><Acronym>ANPP</Acronym></td>
-                                        <td>
+                                        <td>Mayor</td>
+                                        <td>New York</td>
+                                        <!-- <td>
                                             <a href="partyEdit.html">Edit</a>
                                             <button class="btn delete" type="submit">Delete</button>
-                                        </td>
+                                        </td> -->
                                         </tr>
                                         <tr>
-                                            <td>Alliance for Democracy</td>
-                                            <td><Acronym>AD</Acronym></td>
-                                            <td>
+                                            <td>President</td>
+                                            <td>United State of America</td>
+                                            <!-- <td>
                                                 <a href="partyEdit.html">Edit</a>
                                                 <button class="btn delete" type="submit">Delete</button>
-                                            </td>
+                                            </td> -->
                                         </tr>
                                         <tr>
-                                            <td>All Peoples Congress</td>
-                                            <td><Acronym>APC</Acronym></td>
-                                            <td>
+                                            <td>Senator</td>
+                                            <td>Vermont</td>
+                                            <!-- <td>
                                                 <a href="partyEdit.html">Edit</a>
                                                 <button class="btn delete" type="submit">Delete</button>
-                                            </td>
+                                            </td> -->
                                         </tr>     
                                     </tbody>                                   
                                 </table>
