--- a/UI/partyEdit.html
+++ b/UI/partyEdit.html
@@ -31,8 +31,8 @@
                 <ul class="navbar-nav">
                     <li><a class="btn side" href="dashboard.html">Basic</a></li>
                     <li><a class="btn side" href="parties.html">Political Parties</a></li>
-                    <!--<li><a class="btn side" href="#">Motivational</a></li>
-                    <li><a class="btn side" href="#">Inspirational</a></li> -->
+                    <li><a class="btn side" href="politicalOffice.html">Political Office</a></li>
+                    <!--<li><a class="btn side" href="#">Inspirational</a></li> -->
                 </ul>
             </section>
             </div>
