ft(feature):express interest to run for a office
ensure a politician can express interest to run for an office

[Delivers ft-feature-UI-contest-#163279966]

--- a/UI/politicalOffice.html
+++ b/UI/politicalOffice.html
@@ -55,49 +55,44 @@
                                         <tr>
                                             <th>Office</th>
                                             <th>Location</th>
-                                            <!-- <th>Action</th> -->
+                                            <th>Action</th>
                                         </tr>
                                     </thead>
                                     <tbody>
                                         <tr>
                                             <td>Governor</td>
                                             <td>Alabama</td>
-                                            <!-- <td>
-                                                <a href="partyEdit.html">Edit</a>
-                                                <button class="btn delete" type="submit">Delete</button>
-                                            </td> -->
+                                            <td>
+                                                <button class="btn contest" type="submit">Contest</button>
+                                            </td>
                                         </tr>
                                         <tr>
                                         <td>Governor</td>
                                         <td>New York</td>
-                                        <!-- <td>
-                                            <a href="partyEdit.html">Edit</a>
-                                            <button class="btn delete" type="submit">Delete</button>
-                                        </td> -->
+                                        <td>
+                                            <button class="btn contest" type="submit">Contest</button>
+                                        </td>
                                         </tr>
                                         <tr>
                                         <td>Mayor</td>
                                         <td>New York</td>
-                                        <!-- <td>
-                                            <a href="partyEdit.html">Edit</a>
-                                            <button class="btn delete" type="submit">Delete</button>
-                                        </td> -->
+                                        <td>
+                                            <button class="btn contest" type="submit">Contest</button>
+                                        </td>
                                         </tr>
                                         <tr>
                                             <td>President</td>
                                             <td>United State of America</td>
-                                            <!-- <td>
-                                                <a href="partyEdit.html">Edit</a>
-                                                <button class="btn delete" type="submit">Delete</button>
-                                            </td> -->
+                                            <td>
+                                                <button class="btn contest" type="submit">Contest</button>
+                                            </td>
                                         </tr>
                                         <tr>
                                             <td>Senator</td>
                                             <td>Vermont</td>
-                                            <!-- <td>
-                                                <a href="partyEdit.html">Edit</a>
-                                                <button class="btn delete" type="submit">Delete</button>
-                                            </td> -->
+                                            <td>
+                                                <button class="btn contest" type="submit">Contest</button>
+                                            </td>
                                         </tr>     
                                     </tbody>                                   
                                 </table>
