ft(feature):view all politicians
ensure users can view all politicians vying for a given office

[Delivers ft-feature-UI-viewPol-#163332896]

--- a/UI/dashboard.html
+++ b/UI/dashboard.html
@@ -32,7 +32,12 @@
                     <li><a class="btn side" href="dashboard.html">Basic</a></li>
                     <li><a class="btn side" href="parties.html">Political Parties</a></li>
                     <li><a class="btn side" href="politicalOffice.html">Political Office</a></li>
-                    <!--<li><a class="btn side" href="#">Inspirational</a></li> -->
+                    <li><a class="btn side" href="#" aria-haspopup="true">Election</a>
+                        <ul class="dropdown" aria-label="submenu">
+                            <li><a href="contestants.html">Contestants</a></li>
+                            <li><a href=""></a></li>
+                        </ul>
+                    </li>
                 </ul>
             </section>
             </div>
