ft(feature):view election result
ensure users can view election result

[Delivers ft-feature-UI-viewResult-#163279692]

--- a/UI/contestants.html
+++ b/UI/contestants.html
@@ -35,6 +35,7 @@
                     <li><a class="btn side" href="#" aria-haspopup="true">Election</a>
                         <ul class="dropdown" aria-label="submenu">
                             <li><a href="contestants.html">Contestants</a></li>
+                            <li><a href="electionResult.html">Results</a></li>
                             <li><a href=""></a></li>
                         </ul>
                     </li>
