--- a/UI/electionResult.html
+++ b/UI/electionResult.html
@@ -47,13 +47,6 @@
             <section id="main-content">
                 <div class="container-wrapper">
                     <div class="container">
-                        <div class="row">
-                            <div class="col-12 mx">
-                               <div class="addNewParty">
-                                    <a class="btn" href="newOffice.html" style="color:black">Create new office</a>
-                               </div>
-                            </div>
-                        </div>
                         <div class="row jcc">
                             <div class="col-7 mx">
                                 <table>
@@ -61,7 +54,8 @@
                                         <tr>
                                             <th>Office</th>
                                             <th>Location</th>
-                                            <th>Action</th>
+                                            <th>Contestants</th>
+                                            <th>Votes</th>
                                         </tr>
                                     </thead>
                                     <tbody>
@@ -69,36 +63,91 @@
                                             <td>Governor</td>
                                             <td>Alabama</td>
                                             <td>
-                                                <button class="btn contest" type="submit">Contest</button>
+                                                <ol>
+                                                    <li>Barack Obama</li>
+                                                    <li>Mathias Schleiden</li>
+                                                    <li>Anton Van Leeuwenhoek</li>
+                                                </ol>
+                                            </td>
+                                            <td>
+                                                <ol>
+                                                    <li>100</li>
+                                                    <li>389</li>
+                                                    <li>388</li>
+                                                </ol>
                                             </td>
                                         </tr>
                                         <tr>
                                         <td>Governor</td>
                                         <td>New York</td>
                                         <td>
-                                            <button class="btn contest" type="submit">Contest</button>
+                                            <ol>
+                                                <li>Vincent Kompany</li>
+                                                <li>Theodore Schwann</li>
+                                                <li>Ernest Velverdes</li>
+                                            </ol>
                                         </td>
+                                        <td>
+                                                <ol>
+                                                    <li>100</li>
+                                                    <li>389</li>
+                                                    <li>388</li>
+                                                </ol>
+                                            </td>
                                         </tr>
                                         <tr>
                                         <td>Mayor</td>
                                         <td>New York</td>
                                         <td>
-                                            <button class="btn contest" type="submit">Contest</button>
+                                            <ol>
+                                                <li>Raul Meireless</li>
+                                                <li>Arsene Wenger</li>
+                                                <li>Sherlock Holmes</li>
+                                            </ol>
                                         </td>
+                                        <td>
+                                            <ol>
+                                                <li>100</li>
+                                                <li>389</li>
+                                                <li>388</li>
+                                            </ol>
+                                            </td>
                                         </tr>
                                         <tr>
                                             <td>President</td>
                                             <td>United State of America</td>
                                             <td>
-                                                <button class="btn contest" type="submit">Contest</button>
+                                                <ol>
+                                                    <li>Antonio Spallanzani</li>
+                                                    <li>Mauricio Pochettino</li>
+                                                    <li>Fernando Gago</li>
+                                                </ol>
                                             </td>
+                                            <td>
+                                                    <ol>
+                                                        <li>100</li>
+                                                        <li>389</li>
+                                                        <li>388</li>
+                                                    </ol>
+                                                </td>
                                         </tr>
                                         <tr>
                                             <td>Senator</td>
                                             <td>Vermont</td>
                                             <td>
-                                                <button class="btn contest" type="submit">Contest</button>
+                                                <ol>
+                                                    <li>Fabricio Maurice</li>
+                                                    <li>Geiger Muller</li>
+                                                    <li>Jack Stapleton</li>
+                                                </ol>
                                             </td>
+                                            <td>
+                                                    <ol>
+                                                        <li>100</li>
+                                                        <li>389</li>
+                                                        <li>388</li>
+                                                    </ol>
+                                                </td>
                                         </tr>     
                                     </tbody>                                   
                                 </table>
