--- a/UI/newOffice.html
+++ b/UI/newOffice.html
@@ -35,6 +35,7 @@
                     <li><a class="btn side" href="#" aria-haspopup="true">Election</a>
                         <ul class="dropdown" aria-label="submenu">
                             <li><a href="contestants.html">Contestants</a></li>
+                            <li><a href="electionResult.html">Results</a></li>
                             <li><a href=""></a></li>
                         </ul>
                     </li>
