--- a/UI/newParty.html
+++ b/UI/newParty.html
@@ -36,7 +36,7 @@
                         <ul class="dropdown" aria-label="submenu">
                             <li><a href="contestants.html">Contestants</a></li>
                             <li><a href="electionResult.html">Results</a></li>
-                            <li><a href=""></a></li>
+                            <li><a href="vote.html">Vote</a></li>
                         </ul>
                     </li>
                 </ul>
