--- a/UI/passReset.html
+++ b/UI/passReset.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Welcome Back</title>
+    <title>Create a Politico Account</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="./assets/css/style.css" />
 </head>
@@ -33,24 +33,26 @@
                     <div class="col-6 mx tc">
                         <div class="smug mb-10">
                             <h2>POLITICO</h2>
-                            <h4>Voting is your right, exercise it!!</h4>
+                            <h4>Password Reset</h4>
                         </div>
                         <div class="form-container">
                             <form action="" id="regForm" class="form mb-10">
                                 <div class="single-input mb-10">
-                                    <input type="email" name="email" placeholder="Email Address" onfocus="this.placeholder=''" onblur="this.placeholder ='Email Address'">
+                                    <input type="email" name="email" placeholder="e.g john@aol.com" required onfocus="this.placeholder = ''" onblur="this.placeholder = 'email'">
                                 </div>
                                 <div class="single-input mb-10">
-                                    <input type="password" name="password" placeholder="Your Password" onblur="this.placeholder='Your Password'" onfocus="this.placeholder=''">
+                                    <input type="password" name="password" placeholder="password" onfocus="this.placeholder=''" onblur="this.placeholder ='password'">
                                 </div>
-                                <a href="passReset.html">Forgot password?</a>
+                                <div class="single-input mb-10">
+                                    <input type="password" name="confirmPassword" placeholder="Confirm password" onblur="this.placeholder='Confirm password'" onfocus="this.placeholder=''">
+                                </div>
                                 <div class="d-flex jcc">
-                                    <button class="mt-10 aic btn-primary text-uppercase">Login</button>
+                                    <button class="mt-10 aic btn-primary text-uppercase">Reset Password</button>
                                 </div>
                             </form>
-                            <p>Don't have an account?</p>
-                            <a href="signup.html">Create an account</a>
-                        </div>
+                            <p>Already have an account?</p>
+                            <a href="login.html">Sign in</a>
+                        </div><!-- form-container closed-->
                     </div>
                 </div>
             </div>
